fabric/testdata/out/ing_spp-brand-service-post-api-brands-id-media-rl-service-stupssppbrandserviceloadtest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"spp-brand-service.brands.write\") -\u003e clusterClientRatelimit(\"spp-brand-service_api-brands-id-media_POST_stups_spp-brand-service-loadtest\",
      1000, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\") -\u003e corsOrigin(\"https://dabo-master.lounge-test.zalan.do\",
      \"https://dabo.lounge-test.zalan.do\", \"https://mooncake-master.lounge-test.zalan.do\",
      \"https://mooncake-freeze.lounge-test.zalan.do\", \"https://dabo-freeze.lounge-test.zalan.do\")","zalando.org/skipper-predicate":"Weight(4)
      \u0026\u0026 Path(\"/api/brands/:id/media\") \u0026\u0026 Method(\"POST\") \u0026\u0026
      JWTPayloadAllKV(\"sub\", \"stups_spp-brand-service-loadtest\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"916e724f-8e4a-4dad-9567-3d476c465596","deployment-id":"d-xr2dcbhocgmgsjwa9hxg1626a","pipeline-id":"l-2a15ina44v1jfac239xyczoh9s"},"name":"spp-brand-service-post-api-brands-id-media-rl-service-stupssppbrandserviceloadtest","namespace":"default"},"spec":{"rules":[{"host":"spp-brand-service.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-brand-service","servicePort":"http"},"pathType": [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-brand-service.brands.write") -> clusterClientRatelimit("spp-brand-service_api-brands-id-media_POST_stups_spp-brand-service-loadtest",
      1000, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm") -> corsOrigin("https://dabo-master.lounge-test.zalan.do",
      "https://dabo.lounge-test.zalan.do", "https://mooncake-master.lounge-test.zalan.do",
      "https://mooncake-freeze.lounge-test.zalan.do", "https://dabo-freeze.lounge-test.zalan.do")'
    zalando.org/skipper-predicate: Weight(4) && Path("/api/brands/:id/media") && Method("POST")
      && JWTPayloadAllKV("sub", "stups_spp-brand-service-loadtest") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2020-03-11T15:15:34Z"
  generation: 4
  labels:
    controller-uid: 916e724f-8e4a-4dad-9567-3d476c465596
    deployment-id: d-xr2dcbhocgmgsjwa9hxg1626a
    pipeline-id: l-2a15ina44v1jfac239xyczoh9s
  name: spp-brand-service-post-api-brands-id-media-rl-service-stupssppbrandserviceloadtest
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-brand-service
    uid: 916e724f-8e4a-4dad-9567-3d476c465596
  resourceVersion: "1379126971"
  uid: 8836226e-19b2-417a-968a-a1b8b96e441b
spec:
  rules:
  - host: spp-brand-service.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-brand-service
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-brand-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-brand-service
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
